style: fix right-alignment of google rating contents inside full-width mobile badge

--- a/style.css
+++ b/style.css
@@ -1040,7 +1040,7 @@ h3 {
     }
 
     .services__rating-link {
-        justify-content: flex-end;
+        justify-content: flex-end !important;
         padding-right: var(--container-padding, 16px);
     }
 }
